fixed layout issues with adding a new time card, local user time cards display on the same row

--- a/styles/Components/TimelineCard.module.scss
+++ b/styles/Components/TimelineCard.module.scss
@@ -1,10 +1,14 @@
 .container {
-	position: relative;
+	position: absolute;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background: #cecece;
 	border-radius: 5px;
+}
+
+.newCard {
+	position: absolute;
 }
 
 .content {
